// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardSearch add ok 1`] = `
<div>
  <div
    class="container_14qfrn4"
  >
    <div
      class="titleContainer_1ygy1t"
    >
      <input
        class="seacrhInput_1ys00gq"
        placeholder="Find pokemon"
        value=""
      />
      <img
        alt="search"
        class="seacrhImg_19gehg2"
        src="search.png"
      />
    </div>
    <div
      class="EmptyContainer_ge2zda"
    >
      <div
        class="EmptyText_sxmy1e"
      >
        Searching...
      </div>
    </div>
  </div>
</div>
`;

exports[`CardSearch add ok 2`] = `
<div>
  <div
    class="container_14qfrn4"
  >
    <div
      class="titleContainer_1ygy1t"
    >
      <input
        class="seacrhInput_1ys00gq"
        placeholder="Find pokemon"
        value=""
      />
      <img
        alt="search"
        class="seacrhImg_19gehg2"
        src="search.png"
      />
    </div>
    <div
      class="cardListContainer_1m8x2n3"
    >
      <div
        class="card_1dgqvry"
      >
        <div
          class="container_b4ahsr"
        >
          <div
            class="imageContainer_1g6vvub"
          >
            <img
              alt="Deoxys ex"
              class="image_5hddva"
              src="https://images.pokemontcg.io/ex8/98.png"
            />
          </div>
          <div
            class="desc_19c633u"
          >
            <div
              class="titleContainer_1ryugy2"
            >
              <div
                class="name_4p276u"
              >
                DEOXYS EX
              </div>
              <div>
                <div
                  class="addButton_5gyw2"
                >
                  Add
                </div>
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                HP
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_zdxht7"
                  />
                </div>
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                STR
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_1hfu0v"
                  />
                </div>
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                WEAK
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_zdxht7"
                  />
                </div>
              </div>
            </div>
            <div
              class="cuteContainer_zz3svu"
            >
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="card_1dgqvry"
      >
        <div
          class="container_b4ahsr"
        >
          <div
            class="imageContainer_1g6vvub"
          >
            <img
              alt="Cubone"
              class="image_5hddva"
              src="https://images.pokemontcg.io/dp6/90.png"
            />
          </div>
          <div
            class="desc_19c633u"
          >
            <div
              class="titleContainer_1ryugy2"
            >
              <div
                class="name_4p276u"
              >
                CUBONE
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                HP
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_1tlr5t6"
                  />
                </div>
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                STR
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_zdxht7"
                  />
                </div>
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                WEAK
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_zdxht7"
                  />
                </div>
              </div>
            </div>
            <div
              class="cuteContainer_zz3svu"
            >
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardSearch add ok 3`] = `
<div>
  <div
    class="container_14qfrn4"
  >
    <div
      class="titleContainer_1ygy1t"
    >
      <input
        class="seacrhInput_1ys00gq"
        placeholder="Find pokemon"
        value=""
      />
      <img
        alt="search"
        class="seacrhImg_19gehg2"
        src="search.png"
      />
    </div>
    <div
      class="cardListContainer_1m8x2n3"
    >
      <div
        class="card_1dgqvry"
      >
        <div
          class="container_b4ahsr"
        >
          <div
            class="imageContainer_1g6vvub"
          >
            <img
              alt="Cubone"
              class="image_5hddva"
              src="https://images.pokemontcg.io/dp6/90.png"
            />
          </div>
          <div
            class="desc_19c633u"
          >
            <div
              class="titleContainer_1ryugy2"
            >
              <div
                class="name_4p276u"
              >
                CUBONE
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                HP
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_1tlr5t6"
                  />
                </div>
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                STR
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_zdxht7"
                  />
                </div>
              </div>
            </div>
            <div
              class="descContainer_14nb90c"
            >
              <div
                class="descText_1r7w1yk"
              >
                WEAK
              </div>
              <div
                class="descBar_2jj7wg"
              >
                <div
                  class="container_tze1ke"
                >
                  <div
                    class="bar_1o8e29j-o_O-bar_zdxht7"
                  />
                </div>
              </div>
            </div>
            <div
              class="cuteContainer_zz3svu"
            >
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
              <img
                alt="cute"
                class="cuteImage_1pmj90s"
                src="cute.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardSearch renders without crashing 1`] = `
<div>
  <div
    class="container_14qfrn4"
  >
    <div
      class="titleContainer_1ygy1t"
    >
      <input
        class="seacrhInput_1ys00gq"
        placeholder="Find pokemon"
        value=""
      />
      <img
        alt="search"
        class="seacrhImg_19gehg2"
        src="search.png"
      />
    </div>
    <div
      class="EmptyContainer_ge2zda"
    >
      <div
        class="EmptyText_sxmy1e"
      >
        Searching...
      </div>
    </div>
  </div>
</div>
`;
